<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="#000000"    
    android:focusable="true"  
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >

    <!-- 系统标题 -->

     <include layout="@layout/layout_title" />
    
     <!-- 分页 -->

    <include layout="@layout/layout_common_tab_title"/>
    
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/system_title"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:background="@drawable/bg" >
        
        <!-- 顶部的搜索区域 -->
        
        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/common_titlebar" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/title_bar_jiantou"
                android:contentDescription="@string/line" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/task_list"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/activity_mytasks_btn_shuaxin"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"                
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="2dip"
                android:layout_marginRight="10dip"
                android:text="刷新"
                android:textSize="14dip"
                android:textColor="@color/white"
                android:background="@drawable/btn_style_2" />
            
            
            <Button
                android:id="@+id/activity_mytasks_btn_back"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/activity_mytasks_btn_shuaxin"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="2dip"
                android:layout_marginRight="10dip"
                android:text="返回"
                android:textSize="14dip"
                android:textColor="@color/white"
                android:background="@drawable/btn_style_2" />
            
            
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tabletitle_layout"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_below="@id/title_layout"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/mytask_table_title_bg"            
            android:orientation="horizontal" >

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="30dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="70dip"
                android:layout_height="fill_parent"
                android:text="客户\n姓名" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:text="@string/telephone" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:text="@string/auto_type" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:text="@string/auto_plate" />

            <TextView
                android:visibility="gone"
                style="@style/mytask_table_text"
                android:layout_width="60dip"
                android:layout_height="fill_parent"
                android:text="@string/outlet" />

            <TextView
                android:visibility="gone"
                style="@style/mytask_table_text"
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:text="@string/area" />

            
            
            <TextView
                style="@style/mytask_table_text"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:text="预约检测\n时间" />
            
            <TextView
                style="@style/mytask_table_text"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:text="检测完成\n时间" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="50dip"
                android:layout_height="fill_parent"
                android:text="@string/state" />

            <TextView
                style="@style/mytask_table_text"
                android:layout_width="90dip"
                android:layout_height="fill_parent"
                android:text="@string/operate" />
        </LinearLayout>

        <ListView
            android:background="@drawable/car_check_linearlayout"
            android:id="@+id/task_listView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/tabletitle_layout"
            android:divider="@drawable/k2"
			android:dividerHeight="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="20dip"
            android:fadeScrollbars="false"
            android:cacheColorHint="#00000000" >
        </ListView>
    </RelativeLayout>

</LinearLayout>